fix swagger health check api
