# backend/internal/models/health.go
@@ -1,0 +1,6 @@
+package models
+
+// HealthResponse represents the response from the health check endpoint
+type HealthResponse struct {
+	Status string `json:"status"`
+}
